--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,3 +74,47 @@ button {
         transform: rotate(360deg);
     }
     } 
+
+    .coin {
+        position: relative;
+    }
+    
+    .toggle-button {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background-color: gray;
+        color: white;
+        border: none;
+        padding: 5px 10px;
+        cursor: pointer;
+        width: 70px;
+        text-align: center;
+    }
+
+    @keyframes jump {
+        0% { transform: translate(-50%, -50%) scale(1); }
+        50% { transform: translate(-50%, -50%) scale(1.1); }
+        100% { transform: translate(-50%, -50%) scale(1); }
+    }
+
+    .jumpWindow {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: white;
+        padding: 20px;
+        border: 2px solid black;
+        z-index: 1000;
+        animation: jump 0.5s ease-in-out;
+    }
+
+    .jumpWindowButtons{
+        background-color: rgb(134, 134, 233);
+        color: white;
+        height: 30px;
+        width: 30px;
+        
+
+    }
