--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@ html,body{
     height: 100%;
 }
 
+#reportsContainer, #aboutContainer{
+    display: none;
+}
+
 #coinsContainer{
     display: flex;
     flex-wrap: wrap;
@@ -38,8 +42,6 @@ nav {
 }
 
 button {
-    
-   
     padding: 10px;
     background-color: #4CAF50;
     color: white;
@@ -63,23 +65,27 @@ button {
     border-radius: 50%;
     display: inline-block;
     box-sizing: border-box;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     animation: rotation 1s linear infinite;
-    }
+}
 
-    @keyframes rotation {
+@keyframes rotation {
     0% {
         transform: rotate(0deg);
     }
     100% {
         transform: rotate(360deg);
     }
-    } 
+} 
 
-    .coin {
+.coin {
         position: relative;
-    }
+}
     
-    .toggle-button {
+.toggle-button {
         position: absolute;
         top: 10px;
         right: 10px;
@@ -90,15 +96,15 @@ button {
         cursor: pointer;
         width: 70px;
         text-align: center;
-    }
+}
 
-    @keyframes jump {
+@keyframes jump {
         0% { transform: translate(-50%, -50%) scale(1); }
         50% { transform: translate(-50%, -50%) scale(1.1); }
         100% { transform: translate(-50%, -50%) scale(1); }
-    }
+}
 
-    .jumpWindow {
+.jumpWindow {
         position: fixed;
         top: 50%;
         left: 50%;
@@ -108,13 +114,15 @@ button {
         border: 2px solid black;
         z-index: 1000;
         animation: jump 0.5s ease-in-out;
-    }
+}
 
-    .jumpWindowButtons{
+.jumpWindowButtons{
         background-color: rgb(134, 134, 233);
         color: white;
         height: 30px;
         width: 30px;
-        
-
-    }
+}
+.face{
+    width: 150px;
+    height: 200px;    
+}    
